deployment/traefik/ip-whitelist.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: ipwhitelist-middleware
  namespace: kube-system
spec:
  ipWhiteList:
    sourceRange:
      - 127.0.0.1/32
      # - 100.102.163.3
      - 10.10.10.1/24
      - 10.42.0.1
