deployment/traefik/uptime-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: uptime-kuma-ingress
  labels:
    name: uptime-kuma-ingress
spec:
  rules:
  - host: uptime.jegyrendszer.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: uptime-kuma-service
            port: 
              number: 3001
